# kinemator

./: CMakeCache.txt  CMakeLists.txt  ImagePlaner.h  ImagePlanner.cpp  Kinemator.cpp  Kinemator.h  Makefile  README.md  cmake_install.cmake  main.cpp  math.cpp  math.h
include/: ImagePlanner.h  Kinemator.h  kinemator_math.h
src/: ImagePlanner.cpp  Kinemator.cpp  main.cpp  math.cpp
